# Automaty-NFA-i-DFA

./: .gitignore  LICENSE  Main.hs  NFA.hs  README.md  Theory.md  nfa.txt  nfa2  nfa3  nfa4  nfa5  project.cabal
.previous-readme/: README.md
app/: Main.hs
scripts/: execute.sh  test.sh
src/Auto/: DFA.hs  NFA.hs
src/Core/: MinimizeDFA.hs  NFAToDFA.hs  nfaToDFA.hs
src/Utils/: GenerateRandomNFA.hs  ParseNFA.hs
tests/: DFATest.hs  GenerateRandomNFATest.hs  MinimizeDFATest.hs  NFATest.hs  NFAToDFATest.hs  PrintNFATest.hs  minTest.hs
