cabal-version:       >=1.10
name:                project
version:             0.1.0.0
build-type:          Simple

executable project
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5,
                       containers,
                       project
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Auto.NFA, Auto.DFA, Core.NFAToDFA, Core.MinimizeDFA, Utils.GenerateRandomNFA
  build-depends:       base >=4.7 && <5,
                       containers,
                       random
  default-language:    Haskell2010

test-suite nfa-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             NFATest.hs
  build-depends:       base >=4.7 && <5,
                       hspec,
                       containers,
                       project
  default-language:    Haskell2010

test-suite dfa-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             DFATest.hs
  build-depends:       base >=4.7 && <5,
                       hspec,
                       containers,
                       project
  default-language:    Haskell2010

test-suite min-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             minTest.hs
  build-depends:       base >=4.7 && <5,
                       hspec,
                       containers,
                       project
  default-language:    Haskell2010

test-suite gen-rand-nfa-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             GenerateRandomNFATest.hs
  build-depends:       base >=4.7 && <5,
                       hspec,
                       containers,
                       project,
                       random
  default-language:    Haskell2010
